fix: fixed phone taps; feat: add to hud; fix: fixed styling & layout issues

--- a/style.css
+++ b/style.css
@@ -1,13 +1,52 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    overflow: hidden;
+}
+main {
+    top: 0;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
 button {
     display: inline-block;
     background-color: #9e9e9e;
     color: white;
-    padding: 14px 20px;
+    padding: 0 20px;
     margin: 8px 0;
+    height: 5vh;
     border: none;
     cursor: pointer;
     font-weight: 600;
     font-size: 16px;
-    margin: 2.5vh -30vw 0 35vw;
     border-radius: 5px;
+    margin: 0 5px;
+}
+.btnContainer {
+    text-align: center;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 80vh;
+    height: 20vh;
+    @media screen and (min-width: 600px) {
+        top: 92vh;
+    }
+        
+    }
 }
